# Intelligent_Arm_Project

./: LICENSE  README.md
Arduino_code/: OpenArms_mk2a.ino
ROS_module/openarms/: CMakeLists.txt
ROS_module/openarms/launch/: detection.launch
ROS_module/openarms/src/: detection.py
ROS_module/openarms/src/model/: tiny_yolo2.py
arduino/: openarms_control.ino
rospy/openarms_perception/: CMakeLists.txt  package.xml
rospy/openarms_perception/launch/: detection.launch
