<?xml version="1.0"?>
<package format="2">
  <name>openarms</name>
  <version>0.0.1</version>
  <description>The openARMS detection package</description>

  <maintainer email="artit.anthony@gmail.com">Anthony_Kim</maintainer>
  
  <license>GPLv3</license>

  <author email="artit.anthony@gmail.com">Anthony_Kim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>message_generation</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export></export>
</package>
